<resources>
    <string name="app_name">Phase10</string>
    <string name="menu_regeln">Regeln</string>
    <string name="menu_Phasen">Phasen:</string>
    <string name="phase_1">1: 2 Drillinge</string>
    <string name="phase_2">2: 1 Drilling + 1 Viererfolge</string>
    <string name="phase_3">3: 1 Vierling + 1 Viererfolge</string>
    <string name="phase_4">4: 1 Siebenerfolge</string>
    <string name="phase_5">5: 1 Achterfolge</string>
    <string name="phase_7">7: 2 Vierlinge</string>
    <string name="phase_8">8: 7 Karten einer Farbe</string>
    <string name="phase_9">9: 1 Fünfling + 1 Zwilling</string>
    <string name="phase_6">6 1 Neunerfolge:</string>
    <string name="phasen">Die 10 Phasen sind</string>
    <string name="phase_10">10 1 Fünfling + 1 Drilling:</string>
    <string name="back">zurück</string>
</resources>
